--- a/app/src/main/res/layout/activity_news.xml
+++ b/app/src/main/res/layout/activity_news.xml
@@ -6,4 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".NewsActivity">
 
+    <ProgressBar
+        android:id="@+id/pb_loadingNews"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="125dp"
+        android:layout_height="110dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
